Improve auto-resolution
1. If checking a URI against the base URI yields nothing, an attempt will now
   be made to try the URI itself as a URL.
2. $recursiveRef was added to reference scanning candidates.
3. Absolute referenced URI's are now added to the list of known URLs in the
   scan phase; before, any URI's having a scheme or authority were not added
   to the list of guessable URLs.